add reservation ranges
allow booking a list of ranges
add checks for overlapping reservations
