# models/reservation.go
@@ -1,0 +1,88 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/validate"
+)
+
+/*Reservation date-time marking start of reservation,  duration, and owner of the reservation
+
+swagger:model reservation
+*/
+type Reservation struct {
+
+	/* date-time the reservation begins
+
+	Required: true
+	*/
+	Begin *strfmt.DateTime `json:"begin"`
+
+	/* length in hours of the reservation
+
+	Required: true
+	*/
+	Hoursheld *int64 `json:"hoursheld"`
+
+	/* user claiming the reservation
+
+	Required: true
+	*/
+	Username *string `json:"username"`
+}
+
+// Validate validates this reservation
+func (m *Reservation) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateBegin(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateHoursheld(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateUsername(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Reservation) validateBegin(formats strfmt.Registry) error {
+
+	if err := validate.Required("begin", "body", m.Begin); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Reservation) validateHoursheld(formats strfmt.Registry) error {
+
+	if err := validate.Required("hoursheld", "body", m.Hoursheld); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Reservation) validateUsername(formats strfmt.Registry) error {
+
+	if err := validate.Required("username", "body", m.Username); err != nil {
+		return err
+	}
+
+	return nil
+}
